Fixes canvas sizing from using stretch to 100% for width and height

--- a/style.css
+++ b/style.css
@@ -206,7 +206,9 @@ canvas {
     opacity: 1;
     position: absolute;
     z-index: 2;
+    margin: none;
+    padding: none;
     border: 1px solid red;
-    width: stretch;
-    height: stretch;
+    width: 100%;
+    height: 100%;
 }
